--- a/flexbox.html
+++ b/flexbox.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
+      .el {
+        /* flex: 1; */
+        /* gap: 30px; */
+        /* flex-basis: 0px; */
+      }
       .el--1 {
         background-color: blueviolet;
         align-self: flex-start;
@@ -42,7 +47,7 @@
         margin: 40px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         /* FLEXBOX */
       }
     </style>
@@ -54,9 +59,9 @@
       <div class="el el--3">CSS</div>
       <div class="el el--4">are</div>
       <div class="el el--5">amazing</div>
-      <div class="el el--6">languages</div>
+      <!-- <div class="el el--6">languages</div>
       <div class="el el--7">to</div>
-      <div class="el el--8">learn</div>
+      <div class="el el--8">learn</div> -->
     </div>
   </body>
 </html>
