--- a/flexbox-challange.html
+++ b/flexbox-challange.html
@@ -12,39 +12,44 @@
     <title>FlexBox-Challange</title>
   </head>
   <body>
-    <div class="container">
+    <article class="container">
       <h1 class="page-title">converse chunk taylor all star low top</h1>
-      <img
-        src="../img/challenges.jpg"
-        alt="converse shoes"
-        width="250"
-        height="250"
-      />
-      <div class="details">
-        <h2 class="price">$65.00</h2>
-        <p id="shipping">Free shipping</p>
-        <p class="description">
-          Ready to dress up or down, these classic canvas Chucks are an everyday
-          wardrobe staple.
-        </p>
-        <a href="#">More information &rarr;</a>
-        <div class="color-container">
-          <div class="color-box black"></div>
-          <div class="color-box blue"></div>
-          <div class="color-box red"></div>
-          <div class="color-box orange"></div>
-          <div class="color-box green"></div>
-          <div class="color-box brown"></div>
+      <div class="flex-box">
+        <img
+          src="../img/challenges.jpg"
+          alt="converse shoes"
+          width="250"
+          height="250"
+        />
+        <div class="details">
+          <div class="price-shipping-flex">
+            <h2 class="price">$65.00</h2>
+            <p id="shipping">Free shipping</p>
+          </div>
+          <p class="description">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobe staple.
+          </p>
+          <a href="#">More information &rarr;</a>
+          <div class="color-container">
+            <div class="color-box black"></div>
+            <div class="color-box blue"></div>
+            <div class="color-box red"></div>
+            <div class="color-box orange"></div>
+            <div class="color-box green"></div>
+            <div class="color-box brown"></div>
+          </div>
+        </div>
+        <div class="product-info">
+          <h3 class="product-detail">Product details</h3>
+          <ul>
+            <li>Lightweight, durable canvas sneaker.</li>
+            <li>lightly padded footbed for added comfort.</li>
+            <li>Iconic Chuck Taylor ankle patch.</li>
+          </ul>
         </div>
       </div>
-      <div class="product-info">
-        <h3 class="product-detail">Product details</h3>
-        <ul>
-          <li>Lightweight, durable canvas sneaker.</li>
-          <li>lightly padded footbed for added comfort.</li>
-          <li>Iconic Chuck Taylor ankle patch.</li>
-        </ul>
-      </div>
-    </div>
+      <button class="add-to-cart">add to cart</button>
+    </article>
   </body>
 </html>
