Update flexbox styles and add CSS Grid layout with initial HTML structure

--- a/flexbox.html
+++ b/flexbox.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
-      .el {
-        /* flex: 1; */
-        /* gap: 30px; */
-        /* flex-basis: 0px; */
-      }
+      /* .el {
+         flex: 1; 
+         gap: 30px; 
+        flex-basis: 0px;
+      } */
       .el--1 {
         background-color: blueviolet;
         align-self: flex-start;
