--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="blog.html" target="_blank">Blog</a>
           <a href="#">Challanges</a>
           <a href="flexbox.html">FlexBox</a>
-          <a href="#">CSS Grid</a>
+          <a href="css-grid.html">CSS Grid</a>
         </nav>
         <div class="clear"></div>
       </header>
