--- a/css-grid.html
+++ b/css-grid.html
@@ -48,35 +48,47 @@
         grid-template-rows: repeat(2, 1fr);
         row-gap: 40px;
         column-gap: 20px;
+        display: none;
       }
-      .el--3 {
+      /* .el--3 {
         grid-column: 1 /2;
         grid-row: 1 / 2;
       }
       /* .el--8 {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
-      } */
+      } *
       .el--4 {
         grid-column: 2 / 3;
         grid-row: 1 /2;
       }
       .el--1 {
-        grid-column: 1 / 2;
+        grid-column: 1 / -1;
         grid-row: 2 / 3;
-      }
+      } 
+      */
       .container--2 {
         /* STARTER */
-        display: none;
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
-
-        width: 1000px;
+        margin: 40px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+        /* Aligning tracks inside the container:
+        distribute empty space */
+        justify-content: center;
+        align-content: center;
+        /* Algining items inside CELLS:
+        moving around inside cells */
+        justify-items: center;
+        align-items: center;
       }
     </style>
   </head>
