Refactor layout to use CSS grid for improved structure and organization

--- a/flexbox-challange.html
+++ b/flexbox-challange.html
@@ -13,13 +13,14 @@
   </head>
   <body>
     <article class="container">
-      <h1 class="page-title">converse chunk taylor all star low top</h1>
-      <div class="flex-box">
+      <div class="grid-box">
+        <h1 class="page-title">converse chunk taylor all star low top</h1>
         <img
           src="../img/challenges.jpg"
           alt="converse shoes"
           width="250"
           height="250"
+          class="image"
         />
         <div class="details">
           <div class="price-shipping-flex">
