--- a/01-random.html
+++ b/01-random.html
@@ -14,7 +14,7 @@
         padding-top: 20px;
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
       }
       .before-line,
       .after-line {
@@ -30,6 +30,7 @@
         font-size: 14px;
         text-align: center;
         position: relative;
+        padding: 0px 60px;
       }
       /* .after-line {
         background-color: #fff;
