--- a/hero-section.html
+++ b/hero-section.html
@@ -19,8 +19,9 @@
       }
       .container {
         color: #444;
+        max-width: 1275px;
+        width: 100%;
         margin: 0 auto;
-        width: 1270px;
       }
       header {
         height: 100vh;
@@ -33,6 +34,7 @@
         color:inherit !important;
         font-size: 20px;
         font-weight: 700;
+        padding-top: 32px;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -48,7 +50,7 @@
         width: 50%;
       } 
       h1 {
-        font-size: 52px;
+        font-size: 48px;
         margin-bottom: 32px;
       }
       p {
